<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textColor="@color/Main_brown"
        android:textSize="25sp"
        android:textStyle="italic"
        />

    <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/profilePicReg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.1"
        android:src="@raw/cat"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/NombreReg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/profilePicReg"
        app:layout_constraintVertical_bias="0.22"
        app:layout_constraintHorizontal_bias="0.18"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/Arrow"
        android:textColorHint="@color/Main_brown"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/nomDueñoReg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/NombreReg"
        app:layout_constraintVertical_bias="0.22"
        app:layout_constraintHorizontal_bias="0.25"
        android:hint="@string/nombre_del_due_o"
        android:inputType="text"
        android:textColor="@color/Main_brown"
        android:textColorHint="@color/Main_brown"
        />

    <EditText
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/raza"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.45"
        android:hint="@string/raza"
        android:inputType="text"
        android:textColor="@color/Main_brown"
        android:textColorHint="@color/Main_brown"
        />

    <CalendarView
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:id="@+id/calendar"
        app:layout_constraintTop_toBottomOf="@+id/raza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:elevation="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_nacimiento"
        app:layout_constraintTop_toBottomOf="@+id/raza"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calendar"
        android:textSize="15sp"
        android:textColor="@color/Main_brown"
        android:textStyle="italic"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Button_register"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/raza"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.6"
        android:backgroundTint="@color/Main_brown"
        android:textColor="@color/white"
        android:text="@string/registrarsebutton"

        />

</androidx.constraintlayout.widget.ConstraintLayout>