<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/presentationText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/inicio_de_sesi_n"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Main_brown"
        />

    <EditText
        android:id="@+id/user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:textColor="@color/Main_brown"
        android:textColorHint="@color/Main_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/Main_brown"
        android:textColorHint="@color/Main_brown"
        />
    <Button
        android:id="@+id/Log_in"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.002"
        android:textColor="@color/white"
        android:backgroundTint="@color/Main_brown"

        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/registermain"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/Main_brown"
        android:backgroundTint="@color/white"
        android:text="@string/registrarse"
        app:layout_constraintTop_toBottomOf="@id/Log_in"
        />
    <ImageView
        android:id="@+id/dogLog"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="1.12"
        android:src="@raw/fdlog"

        />
    <ImageView
        android:id="@+id/catLog"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/Log_in"
        app:layout_constraintVertical_bias="1.12"
        android:src="@raw/catlog"
        />
</androidx.constraintlayout.widget.ConstraintLayout>